// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OutlineHeader renders correctly when closed 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1lsng3a"
  >
    <button
      aria-label="toggle outline"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-130mf42-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="ChevronLeftIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`OutlineHeader renders correctly when open 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1nqjmij"
  >
    <button
      aria-label="toggle outline"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1nyqon6-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="ChevronRightIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
        />
      </svg>
    </button>
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-onjnbs-MuiTypography-root"
    >
      Outline
    </h6>
  </div>
</DocumentFragment>
`;
